google java format and CI verify